# com_port_reader

./: .gitignore  Cargo.toml
signal_scripts/: demo_braid.signals
src/: acquisition.rs  app.rs  app_log.rs  components.rs  data.rs  device_emulator.rs  device_emulator_handle.rs  dsl.rs  main.rs  sample_sink.rs  script.rs  serial_connection.rs  user_command.rs  utils.rs  worker.rs
src/acquisition/: combined_source.rs  serial_command_source.rs  signal_generator.rs
src/components/: command_model.rs  command_view.rs  controls_model.rs  controls_view.rs  device_emulator_model.rs  help_model.rs  help_view.rs  log_view.rs  plot_downsampling.rs  plot_model.rs  plot_view.rs  script_model.rs  script_view.rs  serial_settings_model.rs  serial_settings_view.rs  series_editor_model.rs  series_editor_view.rs  series_view.rs
src/data/: sample.rs  series.rs  series_name.rs  series_sample.rs  series_store.rs  signal.rs
src/sample_sink/: csv.rs
src/ui/: plot.rs
src/worker/: command.rs  config.rs  event.rs  handle.rs
